Globally set location of the ruby Gemfile

--- a/.github/workflows/validate_bibfile.yml
+++ b/.github/workflows/validate_bibfile.yml
@@ -18,6 +18,9 @@ jobs:
   test:
 
     runs-on: ubuntu-latest
+    
+    env:
+      BUNDLE_GEMFILE: ${{ github.workspace }}/papersite/ruby/Gemfile
 
     steps:
     - uses: actions/checkout@v3
